--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -94,5 +94,21 @@ p{
 .individual h2{
     font-size: 22px;
     text-align: center;
+    align-items: center;
+    justify-content: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+.individual img{
+    width: 100%;
+    height: 50%;
+    justify-content: center;
+}
+.individual button{
+    padding: 10px;
+    font-size: 16px;
+    color: var(--background);
+    font-weight: 150;
+    border-radius: 5px;
+    border: 1px solid var(--primary);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
