--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -73,6 +73,7 @@ p{
 .about{
     padding: 0 10px;
     text-wrap: unset;
+    text-align: center;
 }
 .projects_container{
     color: black;
@@ -90,25 +91,129 @@ p{
 .individual{
     padding-bottom: 15px;
     border-bottom: 1px solid var(--primary);
+    transition: all 0.3s ease-in-out;
+}
+.individual img:hover{
+    transform: translateY(-2px) scale(1.05);
+    padding: 20px;
 }
 .individual h2{
-    font-size: 22px;
+    font-size: 18px;
     text-align: center;
     align-items: center;
     justify-content: center;
+    padding: 0 10px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 .individual img{
     width: 100%;
-    height: 50%;
+    border-radius: 7px;
+    padding: 7px;
     justify-content: center;
 }
+.individual p{
+    font-size: 16px;
+    text-align: center;
+    padding: 0 5px;
+}
 .individual button{
-    padding: 10px;
+    display: grid;
+    margin: 0 auto;
+    padding: 8px;
     font-size: 16px;
     color: var(--background);
-    font-weight: 150;
+    /* font-weight: 150; */
     border-radius: 5px;
     border: 1px solid var(--primary);
+    transition: all 0.3s ease-in-out;
+    
+}
+.individual button:hover{
+    transform: translateY(-2px) scale(1.05);
+    color: var(--text);
+    background-color: var(--primary);
+}
+.individual a{
+    text-decoration: none;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+/*skills*/
+.skills{
+    padding: 0 10px;
+    color: var(--ascent);
+    font-size: 60px;
+    transition: all 0.3s ease-in-out;
+}
+.skills i:hover{
+    color: var(--background);
+    transform: translateY(-2px) scale(1.05);
+}
+
+/*contact*/
+.contact{
+    margin: 0 10px;
+    background-color: var(--ascent);
+    color: var(--primary);
+    border: 1px solid var(--background);
+    border-radius: 7px;
+    transition: all 0.3s ease-in-out;
+    padding-bottom: 10px;
+}
+.contact:hover{
+    transform: translateY(-2px) scale(1.05);
+}
+.contact h2{
+    text-align: center;
+}
+.contact form{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    padding: 0 2px;
+}
+.contact input, .contact textarea{
+    border-radius: 5px;
+    border: 0.5px solid var(--primary);
+    padding: 10px;
+}
+.contact button{
+    width: 80px;
+    padding: 3px;
+    color: var(--background);
+    font-size: 16px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    margin: 0 auto;
+    border: 0.5px solid var(--background);
+    border-radius: 3px;
+    transition: all 0.3s ease-in;
+}
+.contact button:hover{
+    color: var(--text);
+    background-color: var(--primary);
+    transform: translateY(-2px) scale(1.05);
+}
+.socials{
+    margin-top: 15px;
+    display: flex;
+    padding: 0 10px;
+    font-size: 40px;
+    transition: all 0.3s ease-in-out;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+}
+.socials i{
+    color: var(--ascent);
+}
+.socials i:hover{
+    transform: translateY(-2px) scale(1.05);
+}
+.message p{
+    font-size: 14px;
+    padding-top: 5px;
+    text-align: center;
+}
+a{
+    text-decoration: none;
 }
